adicionado a carga de controller de cargo e questinario
